tests/baselines/reference/classExtendsValidConstructorFunction.errors.txt
classExtendsValidConstructorFunction.ts(5,17): error TS2507: Type '() => void' is not a constructor function type.


==== classExtendsValidConstructorFunction.ts (1 errors) ====
    function foo() { }
    
    var x = new foo(); // can be used as a constructor function
    
    class C extends foo { } // error, cannot extend it though
                    ~~~
!!! error TS2507: Type '() => void' is not a constructor function type.